--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "com.wang.widget"
+        applicationId "com.wang.test"
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
@@ -28,4 +28,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     compile project(':library')
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
